Elastic: Fix color of the custom select arrow in dark mode when compiled with lessc

--- a/skins/elastic/styles/dark.less
+++ b/skins/elastic/styles/dark.less
@@ -443,8 +443,8 @@ html.dark-mode {
     }
 
     .custom-select {
-        @color-custom-select-arrow: escape(@color-dark-input);
-        background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='@{color-custom-select-arrow}' viewBox='0 0 4 5'%3e%3cpath d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
+        @color-arrow: escape(~"@{color-dark-input}");
+        background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='@{color-arrow}' viewBox='0 0 4 5'%3e%3cpath d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
     }
 
     .custom-switch {
